# netdevops-toolkit

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
static/: app.css
templates/: base.html  diff.html  index.html  regex.html  telemetry.html  transformer.html
templates/partials/: diff_result.html  diff_textarea_new.html  diff_textarea_old.html  model_input.html  model_preview.html  model_result.html  regex_result.html  regex_textarea.html  result.html  telemetry_preview.html  telemetry_result.html  telemetry_textarea.html  template_editor.html
tests/: README.md  test_app.py
textfsm_templates/: cisco_ios_show_ip_interface_brief.textfsm
